--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -6,19 +6,37 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock head_title %}
 
 {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <h3>{% trans "Password Reset" %}</h3>
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+      {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+      {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
+      <p>
+        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
+      </p>
+    </div>
+  </div>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+        <button type="submit" class="btn btn-signup">
+          {% trans "Reset My Password" %} &raquo;
+        </button>
+      </form>
+    </div>
+  </div>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    </div>
+  </div>
+</div>
 {% endblock content %}
