--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -15,19 +15,22 @@
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top" src="{% static 'images/default.jpg' %}"
-                                    alt="placeholder image">
+                                <!-- Random placeholder image -->
+                                <img class="card-img-top" 
+                                     src="https://picsum.photos/400/300?random={{ forloop.counter }}" 
+                                     alt="placeholder image">
                                 {% else %}
-                                <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
+                                <!-- Use actual uploaded image -->
+                                <img class="card-img-top" src="{{ post.featured_image.url }}" alt="{{ post.title }}">
                                 {% endif %}
                                 <div class="image-flash">
                                     <p class="author">Author: {{ post.author }}</p>
                                 </div>
                             </div>
 
-                            <!-- Single valid anchor tag around the whole card content -->
+                            <!-- Whole card clickable -->
                             <a href="{% url 'post_detail' post.slug %}"
-                                class="post-link text-decoration-none text-dark">
+                               class="post-link text-decoration-none text-dark">
                                 <h2 class="card-title">{{ post.title }}</h2>
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
