--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,23 +7,23 @@
   <div class="row">
     <div class="col-12 col-md-4 text-center">
       {% if "placeholder" in about.profile_image.url %}
-      <img src="{% static 'images/nobody.jpg' %}" width="75%" alt="placeholder image">
+      <img src="{% static 'images/nobody.jpg' %}" style="width:75%;" class="img-fluid" alt="placeholder image">
       {% else %}
-      <img src="{{ about.profile_image.url }}" width="75%" alt="{{ about.title }}">
+      <img src="{{ about.profile_image.url }}" style="width:75%;" class="img-fluid" alt="{{ about.title|default:'About image' }}">
       {% endif %}
     </div>
     <div class="col-12 col-md-8">
-      <h2>{{ about.title }}</h2>
-      {{ about.content | safe }}
+      <h2>{{ about.title|default:"About Us" }}</h2>
+      {{ about.content|safe }}
     </div>
   </div>
-  <div class="row">
-    <div class="col text-right">
-      <!-- Updated on field goes in here -->
 
-      <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+  <div class="row">
+    <div class="col text-end">
+      <p><em>Updated on: {{ about.updated_on }}</em></p>
     </div>
   </div>
+
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 my-5">
       <h2>Let's collaborate!</h2>
@@ -33,11 +33,9 @@
         I'm excited to hear from you. Fill out the form
         and we can get the ball rolling!</p>
 
-      <!-- add your form here. Your submit button should 
-                                have the classes of btn, btn-secondary -->
       <form method="post">
-        {{ collaborate_form | crispy }}
         {% csrf_token %}
+        {{ collaborate_form|crispy }}
         <button class="btn btn-secondary" type="submit">Submit</button>
       </form>
     </div>
