--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,14 +6,14 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-12 col-md-4 text-center">
-      {% if "placeholder" in about.profile_image.url %}
-      <img src="{% static 'images/nobody.jpg' %}" style="width:75%;" class="img-fluid" alt="placeholder image">
+      {% if about.profile_image %}
+        <img src="{{ about.profile_image.url }}" style="width:75%;" class="img-fluid" alt="{{ about.title|default:'About image' }}">
       {% else %}
-      <img src="{{ about.profile_image.url }}" style="width:75%;" class="img-fluid" alt="{{ about.title|default:'About image' }}">
+        <img src="{% static 'images/nobody.jpg' %}" style="width:75%;" class="img-fluid" alt="Default image">
       {% endif %}
     </div>
     <div class="col-12 col-md-8">
-      <h2>{{ about.title|default:"About Us" }}</h2>
+      <h2>{{ about.title|default:"About" }}</h2>
       {{ about.content|safe }}
     </div>
   </div>
