--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,18 +7,27 @@
   <div class="row">
     <div class="col-12 col-md-4 text-center">
       {% if about.profile_image %}
-        <img src="{{ about.profile_image.url }}" style="width:75%;" class="img-fluid" alt="{{ about.title|default:'About image' }}">
+        <img src="{{ about.profile_image.url }}"
+             style="width:75%;"
+             class="img-fluid"
+             alt="{{ about.title|default:'About image' }}">
       {% else %}
-        <img src="{% static 'images/nobody.jpg' %}" style="width:75%;" class="img-fluid" alt="Default image">
+        <img src="{% static 'images/nobody.jpg' %}"
+             style="width:75%;"
+             class="img-fluid"
+             alt="Default image">
       {% endif %}
     </div>
+
     <div class="col-12 col-md-8">
       <h2>{{ about.title|default:"About" }}</h2>
-      {{ about.content|safe }}
+      <div>
+        {{ about.content|safe }}
+      </div>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-3">
     <div class="col text-end">
       <p><em>Updated on: {{ about.updated_on }}</em></p>
     </div>
@@ -27,13 +36,14 @@
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 my-5">
       <h2>Let's collaborate!</h2>
-      <p>I believe in the power of shared knowledge and collective effort.
-        Whether you have a project in mind, wish to co-author
-        an article, or simply want to brainstorm some ideas,
-        I'm excited to hear from you. Fill out the form
-        and we can get the ball rolling!</p>
+      <p>
+        I believe in the power of shared knowledge and collective effort.
+        Whether you have a project in mind, wish to co-author an article,
+        or simply want to brainstorm some ideas, I'm excited to hear from you.
+        Fill out the form and we can get the ball rolling!
+      </p>
 
-      <form method="post">
+      <form method="post" novalidate>
         {% csrf_token %}
         {{ collaborate_form|crispy }}
         <button class="btn btn-secondary" type="submit">Submit</button>
