Implement comment CRUD features with validation and flash messaging

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -25,9 +25,9 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <div class="card-text">
+                <article class="card-text">
                     {{ post.content | safe }}
-                </div>
+                </article>
             </div>
         </div>
     </div>
